[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "Ass1-gmoylan"
version = "0.0.68"
authors = [
  { name="Gerard Moylan", email="gerardmoylan02@gmail.com" },
]
dependencies = [ # Optional
  "netifaces"
]
description = "networking assignment 1"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
